# remoted

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
config/: remoted.json.example
resources/: remoted.manifest  remoted.rc
src/: app.cpp  app.h  codepage.cpp  codepage.h  config.cpp  config.h  log.cpp  log.h  main.cpp  overlay.cpp  overlay.h  pnp.cpp  pnp.h  serial.cpp  serial.h  ssh.cpp  ssh.h  ssh_auth.cpp  ssh_internal.h  ssh_serial.cpp  ssh_shell.cpp  tray.cpp  tray.h  util.h
